[project]
name = "streamlit-testing-feedback"
version = "0.4.0"
description = "Product-testing recorder for Streamlit apps: screen + voice capture into riffrec-layout session zips"
requires-python = ">=3.11"
dependencies = ["streamlit>=1.36"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streamlit_testing_feedback"]
artifacts = ["src/streamlit_testing_feedback/frontend/dist"]
